syntax = "proto2";  
  
message DeleteDeg2FriendRQ
{
     required uint64 user_id = 1; // 请求的用户ID
     required uint64 peer_id = 2; // 请求删除的二度好友ID

}

 